fix vids not showing on home page

--- a/wp-content/themes/glp/src/styles/participant-clip.less
+++ b/wp-content/themes/glp/src/styles/participant-clip.less
@@ -6,7 +6,7 @@
 
 	iframe, object, embed,
 	.participant-video-embed {
-		position: relative;
+		position: absolute;
 		top: 0;
 		left: 0;
 		height: 100%;
